k8s/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-staging
  labels:
    app.kubernetes.io/part-of: devops-project
    environment: staging
